# rest-api-de

./: README.md  main.py  pyproject.toml
modules/: get_data.py
transactions/: Transaction_20250305101010.csv  Transaction_20250306101010.csv  Transaction_20250307101010.csv  Transaction_20250308101010.csv  Transaction_20250309101010.csv
