[tool.poetry]
name = "rest-api-de"
version = "0.1.0"
description = ""
authors = ["Kansinee K."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
pandas = "^2.2.3"
watchdog = "^6.0.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
